# pg_func_stub

./: LICENSE  Makefile  README-中文.md  README.md  meson.build  pg_func_stub--1.0.sql  pg_func_stub.c  pg_func_stub.control  pg_func_stub_inner.c  pg_func_stub_inner.h
